# kernal-function

./: CMakeLists.txt  CMakePresets.json  README.md  run.ps1
.qt-runtime/6.7.3/msvc2019_64/include/QtCharts/: qtchartsversion.h
.qt-runtime/6.7.3/msvc2019_64/include/QtChartsQml/: qtchartsqmlversion.h
.qt-runtime/6.7.3/msvc2019_64/include/QtCore/: qconfig.h
.qt-runtime/6.7.3/msvc2019_64/include/QtDesigner/: ui_addlinkdialog.h  ui_formlayoutrowdialog.h  ui_gridpanel.h  ui_newactiondialog.h  ui_newformwidget.h  ui_orderdialog.h  ui_plugindialog.h  ui_previewconfigurationwidget.h  ui_qtgradientdialog.h  ui_qtgradienteditor.h  ui_qtgradientview.h  ui_qtgradientviewdialog.h  ui_qtresourceeditordialog.h  ui_selectsignaldialog.h  ui_signalslotdialog.h
.qt-runtime/6.7.3/msvc2019_64/lib/: Qt6Charts.prl  Qt6ChartsQml.prl  Qt6ChartsQmld.prl  Qt6Chartsd.prl  Qt6Concurrentd.prl  Qt6Cored.prl  Qt6DBusd.prl  Qt6DesignerComponentsd.prl  Qt6Designerd.prl  Qt6DeviceDiscoverySupportd.prl  Qt6EntryPointd.prl  Qt6ExampleIcons.prl  Qt6ExampleIconsd.prl  Qt6FbSupportd.prl  Qt6Guid.prl  Qt6Helpd.prl  Qt6LabsAnimationd.prl  Qt6LabsFolderListModeld.prl  Qt6LabsQmlModelsd.prl  Qt6LabsSettingsd.prl  Qt6LabsSharedImaged.prl  Qt6LabsWavefrontMeshd.prl  Qt6Networkd.prl  Qt6OpenGLWidgetsd.prl  Qt6OpenGLd.prl  Qt6PacketProtocold.prl  Qt6PrintSupportd.prl  Qt6QmlBuiltinsd.prl  Qt6QmlCompilerd.prl  Qt6QmlCored.prl  Qt6QmlDebugd.prl  Qt6QmlDomd.prl  Qt6QmlLS.prl  Qt6QmlLSd.prl  Qt6QmlLocalStoraged.prl  Qt6QmlModelsd.prl  Qt6QmlNetworkd.prl  Qt6QmlToolingSettingsd.prl  Qt6QmlTypeRegistrar.prl  Qt6QmlTypeRegistrard.prl  (+37 more)
.qt-runtime/6.7.3/msvc2019_64/metatypes/: qt6qmllsprivate_metatypes.json
.qt-runtime/6.7.3/msvc2019_64/mkspecs/: qconfig.pri  qmodule.pri
.qt-runtime/6.7.3/msvc2019_64/modules/: Charts.json  ChartsQml.json  Concurrent.json  Core.json  DBus.json  Designer.json  DesignerComponentsPrivate.json  DeviceDiscoverySupportPrivate.json  EntryPointPrivate.json  ExampleIconsPrivate.json  FbSupportPrivate.json  FreetypePrivate.json  Gui.json  HarfbuzzPrivate.json  Help.json  JpegPrivate.json  LabsAnimation.json  LabsFolderListModel.json  LabsQmlModels.json  LabsSettings.json  LabsSharedImage.json  LabsWavefrontMesh.json  Linguist.json  Network.json  OpenGL.json  OpenGLWidgets.json  PacketProtocolPrivate.json  PngPrivate.json  PrintSupport.json  QDocCatchConversionsPrivate.json  QDocCatchGeneratorsPrivate.json  QDocCatchPrivate.json  Qml.json  QmlBuiltins.json  QmlCompiler.json  QmlCore.json  QmlDebugPrivate.json  QmlDomPrivate.json  QmlIntegration.json  QmlLSPrivate.json  (+43 more)
build_run/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  KernelFunction.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  kernel_console.vcxproj  kernel_console.vcxproj.filters  kernel_ui.vcxproj  kernel_ui.vcxproj.filters
build_run/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_run/kernel_console.dir/Release/: kernel_console.exe.recipe
build_run/kernel_console.dir/Release/kernel_console.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_run/kernel_ui.dir/Release/: kernel_ui.exe.recipe
build_run/kernel_ui.dir/Release/kernel_ui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_run/kernel_ui_autogen/: mocs_compilation_Release.cpp
build_run/kernel_ui_autogen/include_Release/3YJK5W5UP7/: qrc_app_resources_CMAKE_.cpp
build_run/kernel_ui_autogen/include_Release/MXUWEOXILK/: moc_algorithm_dialog.cpp  moc_cpu_time_chart_widget.cpp  moc_matrix_input_widget.cpp
build_run/kernel_ui_autogen/include_Release/UVLADIE3JM/: moc_mainwindow.cpp
build_run/kernel_ui_autogen/include_Release/YPKJ5OE7LN/: moc_parameter_editor_widget.cpp
build_run/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_run/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
docs/: Integration_Checklist.md  UI_UX_Redesign_Guide.md
resources/: app_resources.qrc
resources/icons/: README.md
resources/qss/: app_theme.qss  app_theme_high_contrast.qss
src/: README.md  main.cpp  main_console.cpp  mainwindow.cpp  mainwindow.h  test_verification.cpp
src/algorithms/: README.md  algorithm1.cpp  algorithm1.h  algorithm2.cpp  algorithm2.h  algorithm3.cpp  algorithm3.h  algorithm4.cpp  algorithm4.h  algorithm5.cpp  algorithm5.h  algorithm_base.cpp  algorithm_base.h
src/engine/: README.md  ipm_engine.cpp  ipm_engine.h
src/gui/: README.md  algorithm_dialog.cpp  algorithm_dialog.h  chart_widget.cpp  chart_widget.h  cpu_time_chart_widget.cpp  cpu_time_chart_widget.h  matrix_input_widget.cpp  matrix_input_widget.h  simple_chart_widget.cpp  simple_chart_widget.h
src/kernels/: README.md  bachir_convex_combo_kernel.cpp  bachir_convex_combo_kernel.h  bachir_kernel.cpp  bachir_kernel.h  derbal20_param_log_kernel.cpp  derbal20_param_log_kernel.h  exponential_parametric_kernel.cpp  exponential_parametric_kernel.h  ijnna23_fractional_kernel.cpp  ijnna23_fractional_kernel.h  kernel_base.cpp  kernel_base.h  log_exponential_kernel.cpp  log_exponential_kernel.h  parameterized_log_kernel.cpp  parameterized_log_kernel.h  parametric_family_kernel.cpp  parametric_family_kernel.h  touil_hyperbolic_kernel.cpp  touil_hyperbolic_kernel.h  trigonometric_kernel.cpp  trigonometric_kernel.h  wu_hyperbolic_kernel.cpp  wu_hyperbolic_kernel.h
src/ui/: README.md  kernel_manager.cpp  kernel_manager.h  parameter_editor_widget.cpp  parameter_editor_widget.h
src/utils/: README.md  test_data.cpp  test_data.h
(+176 files in other folders)
